src/main.scss
a {
  text-decoration: none;
}

.text-primary {
  color: var(--primary-color) !important;
}

h1, h2 {
  color: var(--surface-900);
}

td input, td .p-autocomplete {
  width: 100% !important;
}
td .p-button.p-button-icon-only {
  padding: 0.5rem 0;
}
.editable-cells-table .p-editable-column {
  &:hover {
    cursor: text;
    background-color: var(--surface-50);
  }
  &.p-cell-editing {
    padding: 0 !important;
    input {
      padding: .7rem;
    }
    &.editor-sm, .editor-sm {
      font-size: .9rem;
      input, .p-dropdown-label, .p-autocomplete-dropdown {
        padding: .5rem;
        font-size: .9rem;
      }
    }
  }
  .p-inputnumber {
    width: 100%;
  }
}
.p-datatable-wrapper {
  @extend .custom-scroll-bar;
}
.custom-scroll-bar::-webkit-scrollbar-track {
  background-color: var(--surface-content);
  border: 1px solid var(--bluegray-100);
}

.custom-scroll-bar::-webkit-scrollbar {
  width: 10px;
  height: 10px;
}

.custom-scroll-bar::-webkit-scrollbar-thumb {
  background-color: var(--indigo-200);
  min-height: 40px;
  min-width: 40px;
}

.p-field + .p-field {
  margin-top: 1rem;
}

.p-field label {
  font-weight: 500;
  margin-bottom: 5px;
  display: block;
}

.p-dialog .p-dialog-content {
  padding-top: 3px; // leave space for first input outline shadow
}
.p-tieredmenu {
  width: auto;
}
.p-datatable-scrollable .p-frozen-column {
  z-index: 50;
}

